# ForgeMind

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEMO.md  DEVELOPMENT.md  LICENSE  Procfile  README.md  _create_inits.py  _setup_dirs.ps1  pyproject.toml  railway.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
data/demo/: README.md  decide_query.json  generate_all_demo_pdfs.py  generate_test_pdf.py  reason_query.json
docs/adr/: 0001-modular-monolith.md  0002-hexagonal-architecture.md  0003-python-primary-language.md  0004-graph-storage-strategy.md  0005-hybrid-retrieval.md  0006-vertical-slice-development.md  0007-knowledge-first-domain-model.md
docs/architecture/: overview.md
docs/onboarding/: getting-started.md
docs/standards/: python-engineering-standards.md
src/forgemind/: __init__.py
src/forgemind/api/: __init__.py  app.py  state.py
src/forgemind/api/routes/: __init__.py  dashboard.py  documents.py  graph.py  reasoning.py  visualization.py
src/forgemind/api/schemas/: __init__.py
src/forgemind/graph/: __init__.py
src/forgemind/graph/adapters/: __init__.py  networkx_repository.py
src/forgemind/graph/domain/: __init__.py  entities.py  services.py  value_objects.py
src/forgemind/graph/ports/: __init__.py  inbound.py  outbound.py
src/forgemind/knowledge/: __init__.py
src/forgemind/knowledge/adapters/: __init__.py  analysis_service.py  capability_analyzer.py  entity_normalizer.py  ingestion_service.py  knowledge_evolution.py  memory_chunk_repository.py  memory_document_repository.py  pdf_parser.py  relationship_extractor.py
src/forgemind/knowledge/domain/: __init__.py  entities.py  events.py  knowledge_event.py  parsed_document.py  services.py  value_objects.py
src/forgemind/knowledge/ports/: __init__.py  document_parser.py  inbound.py  outbound.py
src/forgemind/reasoning/: __init__.py  reasoning_service.py
src/forgemind/reasoning/adapters/: __init__.py
src/forgemind/reasoning/domain/: __init__.py  entities.py  services.py  value_objects.py
src/forgemind/reasoning/ports/: __init__.py  inbound.py  outbound.py
src/forgemind/retrieval/: __init__.py
src/forgemind/retrieval/adapters/: __init__.py
src/forgemind/retrieval/domain/: __init__.py  entities.py  services.py  value_objects.py
src/forgemind/retrieval/ports/: __init__.py  inbound.py  outbound.py
src/forgemind/shared/: __init__.py  config.py  errors.py  logging.py  types.py
tests/: conftest.py
tests/architecture/: test_boundaries.py
tests/integration/knowledge/: __init__.py  test_ingestion_integration.py
tests/unit/: test_shared.py
tests/unit/graph/: test_networkx_repository.py
tests/unit/knowledge/: __init__.py  test_entities.py  test_entity_normalizer.py  test_ingestion_service.py  test_knowledge_evolution.py  test_memory_repositories.py  test_pdf_parser.py  test_relationship_extractor.py  test_robustness.py  test_services.py  test_value_objects.py
tests/unit/reasoning/: test_reasoning_service.py
